// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrengthMeter render strong password 1`] = `
<div
  className="sc-bdVaJa eqAilR"
>
  <progress
    className="password-strength-meter-progress strength-Strong"
    max="4"
    value={4}
  />
  <br />
  <div
    className="password-strength-meter-label"
  >
    <strong>
      Password strength: 
      <p
        className="sc-bwzfXH dHbFZD"
      >
        Strong
      </p>
    </strong>
  </div>
</div>
`;

exports[`PasswordStrengthMeter render week password 1`] = `
<div
  className="sc-bdVaJa eqAilR"
>
  <progress
    className="password-strength-meter-progress strength-Weak"
    max="4"
    value={1}
  />
  <br />
  <div
    className="password-strength-meter-label"
  >
    <strong>
      Password strength: 
      <p
        className="sc-bwzfXH iVpbWn"
      >
        Weak
      </p>
    </strong>
  </div>
</div>
`;
